    
-added common punctuation and mathematical characters (=#*∗×·+÷) to the 
 set of tokenizing characters in most languages

-spell checking: Immunized tokens are now ignored and
   don't cause a spelling error anymore; one can also add particular
   contextual expressions to ignored words by using a new action
   of the disambiguator: "ignore_spelling" 

-API:
    -deprecated Rule.isSpellingRule(), please use Rule.isDictionaryBasedSpellingRule()
     instead
 
 
2.4.1 (2014-01-08)

	-updated Morfologik libraries to 1.8.3 to fix slow suggestions
	 in the spell checker, which affected at least en-US


2.4 (2013-12-30)

-Breton:
	-SRX sentence tokenization
	-added/improved a few rules
	-fixed some false alarms
	-fixed incorrect suggestions thanks to added tests on corrections

-Catalan:
	-added/improved several rules
	-fixed false alarms
	-made additions and fixes to the tagger dictionary
	-removed some words from synthesis dictionary (see filter-archaic.txt)
	-added frequency data to the tagger dictionary; frequency wordlist comes from the Gaia 
	 project, with Apache License, version 2.0
	 (https://github.com/mozilla-b2g/gaia/tree/master/keyboard/dictionaries).

-English:
	-added/improved a few rules
	-fixed some false alarms

-French:
	-added/improved several rules
	-fixed some false alarms

-German:
	-added/improved several rules
	-added a synthesizer - the agreement rule can now make suggestions
	 for some errors (not all suggestions are correct, though)

-Polish:
	-added/improved several rules, especially for hyphen and dash usage
	-added frequency information for spell-checking dictionary; 
	 frequency wordlist comes from the Gaia project, with Apache License, 
	 version 2.0
	 (https://github.com/mozilla-b2g/gaia/tree/master/keyboard/dictionaries).
	-fixed some false alarms

-Portuguese:
	-added/improved several rules (it now includes gender rules "a"/"o")
	-it now has 3400+ compound words

-the JAR file has been renamed to languagetool.jar, from formerly