@@ -35,7 +35,7 @@ public class DoublePunctuationRule extends Rule {
   public DoublePunctuationRule(final ResourceBundle messages) {
     super(messages);
     super.setCategory(new Category(messages.getString("category_misc")));
-    setLocQualityIssueType("typographical");
+    setLocQualityIssueType(ITSIssueType.Typographical);
   }
 
   @Override
