@@ -67,7 +67,7 @@ public class GenericUnpairedBracketsRule extends Rule {
     endSymbols = language.getUnpairedRuleEndSymbols();
     numerals = NUMERALS_EN;
     uniqueMapInit();
-    setLocQualityIssueType("typographical");
+    setLocQualityIssueType(ITSIssueType.Typographical);
   }
 
   
