@@ -27,6 +27,7 @@ import junit.framework.TestCase;
 
 import org.languagetool.JLanguageTool;
 import org.languagetool.chunking.ChunkTag;
+import org.languagetool.rules.ITSIssueType;
 import org.languagetool.rules.IncorrectExample;
 import org.languagetool.rules.Rule;
 
@@ -48,16 +49,16 @@ public class PatternRuleLoaderTest extends TestCase {
     final Rule demoRule2 = getRuleById("API_OUTPUT_TEST_RULE", rules);
     assertNull(demoRule2.getUrl());
 
-    assertEquals("uncategorized", demoRule1.getLocQualityIssueType());
-    assertEquals("tag inheritance failed", "addition", getRuleById("TEST_GO", rules).getLocQualityIssueType());
-    assertEquals("tag inheritance overwrite failed", "uncategorized", getRuleById("TEST_PHRASES1", rules).getLocQualityIssueType());
-    assertEquals("tag inheritance overwrite failed", "characters", getRuleById("test_include", rules).getLocQualityIssueType());
+    assertEquals(ITSIssueType.Uncategorized, demoRule1.getLocQualityIssueType());
+    assertEquals("tag inheritance failed", ITSIssueType.Addition, getRuleById("TEST_GO", rules).getLocQualityIssueType());
+    assertEquals("tag inheritance overwrite failed", ITSIssueType.Uncategorized, getRuleById("TEST_PHRASES1", rules).getLocQualityIssueType());
+    assertEquals("tag inheritance overwrite failed", ITSIssueType.Characters, getRuleById("test_include", rules).getLocQualityIssueType());
 
     final List<Rule> groupRules1 = getRulesById("test_spacebefore", rules);
-    assertEquals("tag inheritance form category failed", "addition", groupRules1.get(0).getLocQualityIssueType());
-    assertEquals("tag inheritance overwrite failed", "duplication", groupRules1.get(1).getLocQualityIssueType());
+    assertEquals("tag inheritance form category failed", ITSIssueType.Addition, groupRules1.get(0).getLocQualityIssueType());
+    assertEquals("tag inheritance overwrite failed", ITSIssueType.Duplication, groupRules1.get(1).getLocQualityIssueType());
     final List<Rule> groupRules2 = getRulesById("test_unification_with_negation", rules);
-    assertEquals("tag inheritance from rulegroup failed", "grammar", groupRules2.get(0).getLocQualityIssueType());
+    assertEquals("tag inheritance from rulegroup failed", ITSIssueType.Grammar, groupRules2.get(0).getLocQualityIssueType());
 
     final Set<String> categories = getCategoryNames(rules);
     assertEquals(3, categories.size());
