@@ -25,6 +25,7 @@ import java.util.ResourceBundle;
 
 import org.languagetool.rules.AbstractSimpleReplaceRule;
 import org.languagetool.rules.Category;
+import org.languagetool.rules.ITSIssueType;
 
 /**
  * A rule that matches words which should not be used and suggests
@@ -48,7 +49,7 @@ public class SimpleReplaceRule extends AbstractSimpleReplaceRule {
   public SimpleReplaceRule(final ResourceBundle messages) throws IOException {
     super(messages);
     super.setCategory(new Category("Errors ortogràfics"));
-    super.setLocQualityIssueType("misspelling");
+    super.setLocQualityIssueType(ITSIssueType.Misspelling);
     this.setIgnoreTaggedWords();
   }  
 
