@@ -25,6 +25,7 @@ import java.util.ResourceBundle;
 
 import org.apache.commons.lang.StringUtils;
 import org.languagetool.rules.AbstractSimpleReplaceRule;
+import org.languagetool.rules.ITSIssueType;
 
 /**
  * A rule that matches words or phrases which should not be used and suggests
@@ -50,7 +51,7 @@ public class SimpleReplaceRule extends AbstractSimpleReplaceRule {
 
   public SimpleReplaceRule(final ResourceBundle messages) throws IOException {
     super(messages);
-    setLocQualityIssueType("misspelling");
+    setLocQualityIssueType(ITSIssueType.Misspelling);
     setCheckLemmas(false);
   }
 
