@@ -59,6 +59,10 @@ LanguageTool Change Log
    of the disambiguator: "ignore_spelling" 
 
 -API:
+    -incompatible change: changed the return type of Rule.getLocQualityIssueType()
+     from String to ITSIssueType
+    -incompatible change: changed the parameter of Rule.setLocQualityIssueType()
+     from String to ITSIssueType
     -deprecated Rule.isSpellingRule(), please use Rule.isDictionaryBasedSpellingRule()
      instead
  
